--- a/CodingTest_Study/CodingTest_Study.vcxproj.filters
+++ b/CodingTest_Study/CodingTest_Study.vcxproj.filters
@@ -66,5 +66,8 @@
     <ClCompile Include="..\Code\BaekJoon\BaekJoon_24511.cpp">
       <Filter>00. BaekJoon\2025\05\18</Filter>
     </ClCompile>
+    <ClCompile Include="..\Code\Programmers\Programmers_17680.cpp">
+      <Filter>01. Programmers\2025\05\18</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
