--- a/CodingTest_Study/CodingTest_Study.vcxproj.filters
+++ b/CodingTest_Study/CodingTest_Study.vcxproj.filters
@@ -90,5 +90,8 @@
     <ClCompile Include="..\Code\BaekJoon\BaekJoon_12789.cpp">
       <Filter>00. BaekJoon\2025\05\19</Filter>
     </ClCompile>
+    <ClCompile Include="..\Code\BaekJoon\BaekJoon_2346.cpp">
+      <Filter>00. BaekJoon\2025\05\19</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
