--- a/CodingTest_Study/CodingTest_Study.vcxproj.filters
+++ b/CodingTest_Study/CodingTest_Study.vcxproj.filters
@@ -108,5 +108,8 @@
     <ClCompile Include="..\Code\BaekJoon\BaekJoon_4948.cpp">
       <Filter>00. BaekJoon\2025\05\19</Filter>
     </ClCompile>
+    <ClCompile Include="..\Code\BaekJoon\BaekJoon_2606.cpp">
+      <Filter>00. BaekJoon\2025\05\19</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
