--- a/CodingTest_Study/CodingTest_Study.vcxproj.filters
+++ b/CodingTest_Study/CodingTest_Study.vcxproj.filters
@@ -43,6 +43,15 @@
     <Filter Include="01. Programmers\2025\05\19">
       <UniqueIdentifier>{e14fd4f6-daff-4372-a500-20330bd27aee}</UniqueIdentifier>
     </Filter>
+    <Filter Include="00. BaekJoon\2025\05\20">
+      <UniqueIdentifier>{94d3e548-8139-4105-a162-5468b87b3727}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01. Programmers\2025\05\20">
+      <UniqueIdentifier>{280b6b31-8763-4df8-8f1d-744099cf26a4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Test">
+      <UniqueIdentifier>{737fa4c4-d51d-4cc4-be62-55c6d6449d56}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\BaekJoon\BaekJoon_1260.cpp">
@@ -109,7 +118,16 @@
       <Filter>00. BaekJoon\2025\05\19</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\BaekJoon\BaekJoon_2606.cpp">
+      <Filter>00. BaekJoon\2025\05</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\BaekJoon\BaekJoon_14501.cpp">
       <Filter>00. BaekJoon\2025\05\19</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\BaekJoon\BaekJoon_4779.cpp">
+      <Filter>00. BaekJoon\2025\05\19</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\Test\Test.cpp">
+      <Filter>Test</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
