--- a/CodingTest_Study/CodingTest_Study.vcxproj.filters
+++ b/CodingTest_Study/CodingTest_Study.vcxproj.filters
@@ -129,5 +129,8 @@
     <ClCompile Include="..\Code\Test\Test.cpp">
       <Filter>Test</Filter>
     </ClCompile>
+    <ClCompile Include="..\Code\Programmers\Programmers_159993.cpp">
+      <Filter>01. Programmers\2025\05\20</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
