--- a/CodingTest_Study/CodingTest_Study.vcxproj.filters
+++ b/CodingTest_Study/CodingTest_Study.vcxproj.filters
@@ -135,5 +135,8 @@
     <ClCompile Include="..\Code\BaekJoon\BaekJoon_1149.cpp">
       <Filter>00. BaekJoon\2025\05\20</Filter>
     </ClCompile>
+    <ClCompile Include="..\Code\Programmers\Programmers_340211.cpp">
+      <Filter>01. Programmers\2025\05\20</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
