--- a/CodingTest_Study/CodingTest_Study.vcxproj.filters
+++ b/CodingTest_Study/CodingTest_Study.vcxproj.filters
@@ -142,7 +142,7 @@
       <Filter>00. BaekJoon\2025\05\21</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\BaekJoon\BaekJoon_2559.cpp">
-      <Filter>00. BaekJoon\2025\05</Filter>
+      <Filter>00. BaekJoon\2025\05\21</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
