--- a/CodingTest_Study/CodingTest_Study.vcxproj.filters
+++ b/CodingTest_Study/CodingTest_Study.vcxproj.filters
@@ -144,5 +144,8 @@
     <ClCompile Include="..\Code\BaekJoon\BaekJoon_2559.cpp">
       <Filter>00. BaekJoon\2025\05\21</Filter>
     </ClCompile>
+    <ClCompile Include="..\Code\BaekJoon\BaekJoon_3273.cpp">
+      <Filter>00. BaekJoon\2025\05\21</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
